# Points2Regions

./: .gitignore  LICENSE  README.md  example.ipynb  parameter_tuning.ipynb  points2regions.py  setup.cfg  setup.py
.github/workflows/: pypi.yaml
points2regions/: __init__.py  _points2regions.py  benchmark.py  geojson.py  points2regions.py  utils.py
tissuumaps/: _project.tmap  build_tmap_plugin.py  points2region_tmap.py  template.js
