[metadata]
name = points2regions
author = Axel Andersson
author_email = axel.andersson@it.uu.se
description = A simple and efficient clustering tool for spatial 2D points with categorical labels.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wahlby-lab/Points2Regions
license = MIT
license_files = LICENSE
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scikit-image
    scikit-learn
    scipy
